dir-01/projects/rakshith-ws/namespacemeshrules/artifacts/rule-review-serv-90-for-v1-and-10-for-v3/rule-vs-reviews-50-v3.yaml-version-version-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 90
    - destination:
        host: reviews
        subset: v3
      weight: 10
